// This file contains definitions of all configuration protos.
// These messages should only be stored in textual or in-memory form (i.e. not
// the binary format), so feed free to change any field numbers.

syntax = "proto2";

package heyp.proto;

option go_package = "github.com/uluyol/heyp-agents/go/pb";

import "heyp/proto/app.proto";
import "heyp/proto/config.proto";
import "heyp/proto/heyp.proto";

message DeployedNode {
  optional string name = 1;
  optional string external_addr = 2;
  optional string experiment_addr = 3;

  // Valid roles:
  // - host-agent
  // - cluster-agent
  // - hipri-[DSCP VALUE]
  // - lopri-[DSCP VALUE]
  // - testlopri-[name]-server
  // - testlopri-[name]-client
  // - fortio-[group]-envoy-proxy
  // - fortio-[group]-[name]-server
  // - fortio-[group]-[name]-client
  repeated string roles = 10;
}

message DeployedCluster {
  optional string name = 1;
  repeated string node_names = 2;

  optional AllocBundle limits = 3;
  optional int32 cluster_agent_port = 4;
}

message DeployedTestLopriInstance {
  // Node roles:
  // testlopri-[name]-client
  // testlopri-[name]-server
  optional string name = 1;
  optional int32 serve_port = 2;
  optional TestLopriClientConfig client = 3;
  optional int32 num_client_shards = 4 [default = 1];
  optional int32 num_server_shards = 5 [default = 1];
}

message EnvoyAdmissionControlConfig {
  optional bool enabled = 1 [default = false];
  optional double sampling_window_sec = 2 [default = 120];
  optional double success_rate_thresh = 3 [default = 95]; // don't activate unless SR < thresh
  optional double aggression = 4 [default = 1.5];
  optional double rps_thresh = 5 [default = 5];
  optional double max_rejection_prob = 6 [default = 80];
}

message DeployedFortioInstance {
  // Node roles:
  // fortio-[group]-[name]-server
  // fortio-[group]-[name]-client
  // fortio-[group]-envoy-proxy
  optional string group = 1;
  optional string name = 2;
  repeated int32 serve_ports = 3;  // one server instance will be opened per port
  optional string lb_policy = 4 [default = "ROUND_ROBIN"];
  optional int32 max_connections = 5 [default = 100000];
  optional int32 max_pending_requests = 6 [default = 1000000];
  optional int32 max_requests = 7 [default = 5000000];
  optional double timeout_sec = 8;
  optional FortioClientConfig client = 9;
}

message DeployedFortioGroup {
  optional string name = 1;
  optional int32 envoy_port = 2;
  optional EnvoyAdmissionControlConfig admission_control = 3;
}

message DeployedFortioConfig {
  optional int32 envoy_admin_port = 1;
  optional int32 envoy_num_threads = 2 [default = 8];
  repeated DeployedFortioGroup groups = 3;
  repeated DeployedFortioInstance instances = 4;
}

message DeploymentConfig {
  repeated DeployedNode nodes = 1;
  repeated DeployedCluster clusters = 2;

  // Fields that are autofilled:
  // - cluster_agent_config.server.address (using clusters.cluster_agent_port)
  optional ClusterAgentConfig cluster_agent_config = 10;

  // Fields that are autofilled:
  // - host_agent_template.flow_state_reporter.this_host_addrs
  // - host_agent_template.daemon.cluster_agent_addr
  // - host_agent_template.dc_mapper
  optional HostAgentConfig host_agent_template = 11;
  optional bool host_agent_log_fine_grained_stats = 12;

  // Workloads to run (all are run in parallel).
  repeated DeployedTestLopriInstance testlopri_instances = 13;
  optional DeployedFortioConfig fortio = 14;
}
